--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
 
 @font-face {
     font-family: PoppinsBold;
-    src: url(/fonts/Poppins-Bold.ttf);
+    src: url(../fonts/Poppins-Bold.ttf);
 }
 
 @font-face {
     font-family: PoppinsMedium;
-    src: url(/fonts/Poppins-Medium.ttf);
+    src: url(../fonts/Poppins-Medium.ttf);
 }
 
 .wrapper{
