--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@
 
 .row:hover{
     border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    box-shadow: cornsilk 0px 0px 18px 0px;
     scale: 1.15;
 }
 
@@ -86,27 +87,36 @@
 .flex-container{
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: space-evenly;
     align-items: center;
     background-color: black;
 }
 
-.flex-container a{
+.flex-container button{
+    border: none;
     font-size: 1.2rem;
     text-decoration: none;
     padding: 20px 50px;
     background-color: cornsilk;
     color: maroon;
-    border-radius: 5px;
+    border-radius: 50px;
     transition: all 0.3s ease;
+    margin-top: 20px;
     font-family: PoppinsMedium; 
+    cursor: pointer;
 }
 
-.flex-container a:hover{
-    border-radius: 20px;
+.flex-container button:hover{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     scale: 1.15;
+}
+
+.score{
+    color: cornsilk;
+    font-family: PoppinsMedium;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 @media screen and (max-width: 700px) {
@@ -129,4 +139,7 @@
         font-size: 2rem;
     }
     
+    .o{
+        background: chocolate url(../assets/mob.svg) no-repeat center;
+    }
 }
