--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@
 .row:hover {
   border-radius: 20px;
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-  box-shadow: cornsilk 0px 0px 18px 0px;
+  box-shadow: black 0px 0px 20px 0px;
   scale: 1.15;
 }
 
